Fix sidebar widget Magnify videos
too much space between text and image on mobile

--- a/web/less/frontend/_responsive-767px-max.less
+++ b/web/less/frontend/_responsive-767px-max.less
@@ -213,6 +213,11 @@
     }
   }
 
+  // magnify videos sidebar widget
+  .row-fluid .span5.sidebar-video-image {
+    width: 120px;
+  }
+
   //HEADER & NAV
 
   .cq-logo {
